--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.17",
+    "@heroicons/react": "^2.0.18",
     "autoprefixer": "10.4.15",
+    "bootstrap": "^5.3.1",
     "next": "13.4.19",
     "postcss": "8.4.28",
     "react": "18.2.0",
+    "react-bootstrap": "^2.8.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3"
   }
