--- a/package.json
+++ b/package.json
@@ -13,6 +13,13 @@
     "font-awesome": "^4.7.0",
     "next": "^13.4.19",
     "postcss": "^8.4.28",
+    "@headlessui/react": "^1.7.17",
+    "@heroicons/react": "^2.0.18",
+    "autoprefixer": "10.4.15",
+    "axios": "^1.5.0",
+    "jsonwebtoken": "^9.0.1",
+    "next": "13.4.19",
+    "postcss": "8.4.28",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
