--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
+    "@material-tailwind/react": "^2.1.1",
     "autoprefixer": "10.4.15",
     "bootstrap": "^5.3.1",
     "next": "13.4.19",
@@ -18,6 +19,8 @@
     "react": "18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.10.1",
+    "swr": "^2.2.2",
     "tailwindcss": "3.3.3"
   }
 }
