--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.17",
+    "@heroicons/react": "^2.0.18",
     "autoprefixer": "^10.4.15",
     "font-awesome": "^4.7.0",
     "next": "^13.4.19",
@@ -16,6 +18,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
+    "styled-components": "^6.0.7",
     "tailwindcss": "^3.3.3"
   }
 }
