--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 NEXT_PUBLIC_URL = https://edental-peach.vercel.app
+NEXT_PUBLIC_API_APPOINTMENT_URL = https://edental-peach.vercel.app/api/v1/appointments/
