--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
+    "swiper": "^10.2.0",
     "swr": "^2.2.2",
     "tailwindcss": "^3.3.3"
   }
