--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "axios": "^1.5.0",
     "font-awesome": "^4.7.0",
     "jsonwebtoken": "^9.0.1",
-    "next": "13.4.19",
+    "next": "^13.4.19",
     "postcss": "8.4.28",
     "react": "18.2.0",
     "react-dom": "18.2.0",
